# podkeet

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  ty.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  versioning.yml
src/podkeet/: __init__.py  cli.py  downloader.py  ffmpeg_utils.py  transcriber.py
tests/: test_cli.py
